食材购物清单功能实现和redis优化清单存储